--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             background-color: #F1F1F1;
             text-align: center;
             padding: 20px;
-
+ }
+          @media { {
+   display:inline;
+}}
         }
 
         body {
