--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             var gg_text = new Array();
             gg_text[0] = "Não se preoucupe, dias mais tranquilos virão.";
             gg_text[1] = "Lute e conquiste, não tenha medo de ser feliz!";
-            gg_text[2] = "Ninguém é tão velho que ache que nunca irá viver mais alguns anos";
+            gg_text[2] = "Ninguém é tão velho que ache que nunca irá viver mais alguns anos.";
             gg_text[3] = "Não se esqueça, quem dorme sonha, e quem vive realiza!"
             gg_text[4] = "Não dependa dos outros para se incentivar, incentive-se, você consegue!";
             gg_text[5] = "Não basta sonhar, você tem que lutar e acreditar que é possivel.";
